--- a/package.json
+++ b/package.json
@@ -7,19 +7,17 @@
     "url": "git://github.com/maximnaidenov/angulat-busy-tracker.git"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-connect": "~0.7.1",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-jasmine": "~0.6.3",
-    "grunt-angular-templates": "~0.5.4",
-    "grunt-contrib-concat": "~0.4.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-uglify": "~0.4.0",
-    "grunt-contrib-cssmin": "~0.9.0",
-    "load-grunt-tasks": "~0.4.0"
+    "grunt": "~0.4",
+    "load-grunt-tasks": "~0.4",
+    "grunt-karma": "~0.10",
+
+    "karma": "~0.12",
+    "karma-jasmine": "~0.2",
+    "karma-chrome-launcher": "~0.1"
   },
   "scripts": {
+    "postinstall": "bower install",
+
     "test": "grunt test -v"
   },
   "license": "MIT"
