--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "devDependencies": {
     "grunt": "~0.4",
     "load-grunt-tasks": "~0.4",
+    "grunt-contrib-jshint": "~0.11.0",
+    "grunt-contrib-copy": "~0.7.0",
+    "grunt-contrib-uglify": "~0.7.0",
+    "grunt-contrib-cssmin": "~0.11.0",
     "grunt-karma": "~0.10",
-
     "karma": "~0.12",
     "karma-jasmine": "~0.2",
     "karma-chrome-launcher": "~0.1"
