--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "grunt": "~0.4",
     "load-grunt-tasks": "~0.4",
     "grunt-contrib-jshint": "~0.11.0",
-    "grunt-contrib-copy": "~0.7.0",
+    "grunt-angular-templates": "~0.5.7",
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-uglify": "~0.7.0",
     "grunt-contrib-cssmin": "~0.11.0",
     "grunt-karma": "~0.10",
