--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: node_js
 node_js:
   - "0.10"
-before_script:
-  - "npm install -g bower grunt-cli"
+before_install:
+  - npm install -g bower 
+  - npm install -b grunt-cli
+install:
+  - npm install
+  - bower install
