--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: node_js
 node_js:
   - "0.10"
 before_install:
-  - npm install -g bower 
+  - npm install -g bower
   - npm install -g grunt-cli
-install:
-  - npm install
-  - bower install
+script:
+  - npm test -- --browser=phantom
