--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
   "name": "angular-busy-tracker",
   "description": "Flexible busy tracker for angular",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "repository": {
     "type": "git",
     "url": "git://github.com/maximnaidenov/angular-busy-tracker.git"
   },
   "devDependencies": {
+    "bower": "^1.7.2",
     "grunt": "~0.4",
-    "load-grunt-tasks": "~0.4",
-    "grunt-contrib-jshint": "~0.11.0",
     "grunt-angular-templates": "~0.5.7",
-    "grunt-contrib-concat": "~0.5.0",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "~0.6.0",
-    "grunt-contrib-uglify": "~0.7.0",
+    "grunt-contrib-concat": "~0.5.0",
     "grunt-contrib-cssmin": "~0.11.0",
+    "grunt-contrib-jshint": "~0.11.0",
+    "grunt-contrib-uglify": "~0.7.0",
     "grunt-karma": "~0.10",
     "karma": "~0.12",
-    "karma-jasmine": "~0.2",
     "karma-chrome-launcher": "~0.1",
-    "karma-phantomjs-launcher": "~0.1"
+    "karma-jasmine": "~0.2",
+    "karma-phantomjs-launcher": "~0.1",
+    "load-grunt-tasks": "~0.4"
   },
   "scripts": {
-    "postinstall": "bower install",
-
-    "test": "grunt test"
+    "postinstall": "bower install"
   },
   "license": "MIT"
 }
